--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "url": "https://github.com/ifkas/restful-api-vercel/issues"
   },
   "homepage": "https://github.com/ifkas/restful-api-vercel#readme",
-  "dependencies": {},
+  "dependencies": {
+    "json": "^11.0.0",
+    "server": "^1.0.38"
+  },
   "devDependencies": {
     "json-server": "^0.17.1"
   }
